--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <input type="radio" id="o4-mini" name="ai-model" value="o4-mini">
             <label for="o4-mini">o4-mini</label>
 
+            <input type="radio" id="gpt-3.5-turbo" name="ai-model" value="openrouter:openai/gpt-3.5-turbo">
+            <label for="gpt-3.5-turbo">gpt-3.5-turbo</label>
+
             <input type="radio" id="claude-sonnet-4" name="ai-model" value="claude-sonnet-4">
             <label for="claude-sonnet-4">claude-sonnet-4</label>
 
