adding chat-gpt-5

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div id="chat-container">
         <div id="model-selection">
+            <input checked type="radio" id="gpt-5" name="ai-model" value="gpt-5">
+            <label for="gpt-5">gpt-5</label>
+
             <input checked type="radio" id="gpt-4.1" name="ai-model" value="gpt-4.1">
             <label for="gpt-4.1">gpt-4.1</label>
 
             <input type="radio" id="o4-mini" name="ai-model" value="o4-mini">
             <label for="o4-mini">o4-mini</label>
-
-            <input type="radio" id="gpt-3.5-turbo" name="ai-model" value="openrouter:openai/gpt-3.5-turbo">
-            <label for="gpt-3.5-turbo">gpt-3.5-turbo</label>
 
             <input type="radio" id="claude-sonnet-4" name="ai-model" value="claude-sonnet-4">
             <label for="claude-sonnet-4">claude-sonnet-4</label>
@@ -27,9 +27,6 @@
 
             <input type="radio" id="claude-3-7-sonnet" name="ai-model" value="claude-3-7-sonnet">
             <label for="claude-3-7-sonnet">claude-3-7-sonnet</label>
-
-            <input type="radio" id="claude-3-5-sonnet" name="ai-model" value="claude-3-5-sonnet">
-            <label for="claude-3-5-sonnet">claude-3-5-sonnet</label>
 
             <input type="radio" id="deepseek-chat" name="ai-model" value="deepseek-chat">
             <label for="deepseek-chat">deepseek-chat</label>
