--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input checked type="radio" id="gpt-5" name="ai-model" value="gpt-5">
             <label for="gpt-5">gpt-5</label>
 
-            <input checked type="radio" id="gpt-4.1" name="ai-model" value="gpt-4.1">
+            <input type="radio" id="gpt-4.1" name="ai-model" value="gpt-4.1">
             <label for="gpt-4.1">gpt-4.1</label>
 
             <input type="radio" id="o4-mini" name="ai-model" value="o4-mini">
